Fixed the weird gap on the right

--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,7 @@ body {
 .content_container{
     position: relative;
     display: inline-block;
-    width: 100%;
+    width: 98%;
     height: 100px;
 }
 .box {
@@ -140,9 +140,9 @@ body {
   display: none;
   position: absolute;
   background-color: #f9f9f9;
-  min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
+
 }
 .dropdown-content input {
   float: none;
@@ -151,6 +151,7 @@ body {
   text-decoration: none;
   display: block;
   text-align: left;
+  font-size: 11px;
 }
 .dropdown-content input:hover {
   background-color: #ddd;
